--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Odin"
 description              : "My personal website"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : https://audun97.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : /ParvaRegna3/ # the subpath of your site, e.g. "/blog"
 repository               : Audun97/minimal-mistakes # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : /assets/images/500x300.png # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
