--- a/_config.yml
+++ b/_config.yml
@@ -144,7 +144,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - docs/_pages/
+  - docs
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
